[tool.poetry]
name = "notegraph"
version = "0.1.0"
description = ""
authors = ["zaqsaw <zaqsaw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
flake8-bugbear = "^23.7.10"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
